--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,20 @@
         <artifactId>entity</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+        <version>4.0.4</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
+
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--        <groupId>org.springframework.cloud</groupId>-->
+<!--        <artifactId>spring-cloud-starter-config</artifactId>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
 
 </project>
 
