--- a/service/pom.xml
+++ b/service/pom.xml
@@ -36,5 +36,16 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>io.minio</groupId>
+      <artifactId>minio</artifactId>
+      <version>8.5.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>6.0.13</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
