--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -36,4 +36,4 @@ jobs:
         with:
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hookabook:${{ steps.current-time.outputs.formattedTime }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hookabook:audiobook-microservice:${{ steps.current-time.outputs.formattedTime }}
