--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,17 +2,17 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 
-#spring.datasource.url=jdbc:postgresql://cedeladela.crabdance.com:64432/hookabook
-#spring.datasource.username=hookabook
-#spring.datasource.password=hOOkabOOk47
-
-spring.datasource.url={DATASOURCE_CONNECTION_URL}
-spring.datasource.username={DATASOURCE_USERNAME}
-spring.datasource.password={DATASOURCE_PASSWORD}
-
-#spring.datasource.url=jdbc:postgresql://flora.db.elephantsql.com/yaddinee
-#spring.datasource.username=yaddinee
-#spring.datasource.password=7cUSHOQiUuVSY5wv6hBYwwy3xM-f4UeK
+spring.datasource.url=jdbc:postgresql://cedeladela.crabdance.com:64432/hookabook
+spring.datasource.username=hookabook
+spring.datasource.password=hOOkabOOk47
+#
+#spring.datasource.url={DATASOURCE_CONNECTION_URL}
+#spring.datasource.username={DATASOURCE_USERNAME}
+#spring.datasource.password={DATASOURCE_PASSWORD}
+#
+##spring.datasource.url=jdbc:postgresql://flora.db.elephantsql.com/yaddinee
+##spring.datasource.username=yaddinee
+##spring.datasource.password=7cUSHOQiUuVSY5wv6hBYwwy3xM-f4UeK
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -28,6 +28,8 @@ minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
 minio.bucketName=hookabook
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=500MB
-spring.servlet.multipart.max-request-size=550MB
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
+
+
 
