prometheus, request_total, healthcheck

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -14,22 +14,34 @@ spring.datasource.password=hOOkabOOk47
 ##spring.datasource.username=yaddinee
 ##spring.datasource.password=7cUSHOQiUuVSY5wv6hBYwwy3xM-f4UeK
 
+# server config
+server.port=8081
+
+# db config
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-server.port=8081
-
-
+# minio config
 minio.endpoint=http://cedeladela.crabdance.com:64000
 minio.accessKey=PP8VR990kZYk4YPNuinq
 minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
 minio.bucketName=hookabook
 
+# multipart config
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=550MB
+
+# health check
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,metrics,prometheus
+#http://localhost:8081/actuator/health
+# Enable Micrometer
+management.prometheus.metrics.export.enabled=true
+# requests_total
+
 
 
 
