--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -28,18 +28,18 @@ spec:
           ports:
             - containerPort: 8081
               name: server
-#          livenessProbe:
-#            httpGet:
-#              path: /health/live
-#              port: server
-#            initialDelaySeconds: 20
-#            periodSeconds: 3
-#          readinessProbe:
-#            httpGet:
-#              path: /health/ready
-#              port: server
-#            initialDelaySeconds: 20
-#            periodSeconds: 3
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: server
+            initialDelaySeconds: 20
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: server
+            initialDelaySeconds: 20
+            periodSeconds: 3
 
 ---
 
