--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,12 @@
     </dependencies>
   </dependencyManagement>
 
-<!--    <dependencies>-->
+    <dependencies>
 <!--        <dependency>-->
 <!--        <groupId>org.springframework.cloud</groupId>-->
 <!--        <artifactId>spring-cloud-starter-config</artifactId>-->
 <!--        </dependency>-->
-<!--    </dependencies>-->
+    </dependencies>
 
 </project>
 
