--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -43,5 +43,8 @@ management.prometheus.metrics.export.enabled=true
 # requests_total
 
 
-
+# logging
+spring.application.name=Hookabook-audiobook
+spring.application.version=1.0
+spring.profiles.active=test
 
