--- a/api/pom.xml
+++ b/api/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>micrometer-core</artifactId>
             <version>1.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.0</version>
+        </dependency>
     </dependencies>
 
     <build>
