--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -6,13 +6,9 @@
 #spring.datasource.username=hookabook
 #spring.datasource.password=hOOkabOOk47
 #
-spring.datasource.url={DATASOURCE_CONNECTION_URL}
-spring.datasource.username={DATASOURCE_USERNAME}
-spring.datasource.password={DATASOURCE_PASSWORD}
-#
-##spring.datasource.url=jdbc:postgresql://flora.db.elephantsql.com/yaddinee
-##spring.datasource.username=yaddinee
-##spring.datasource.password=7cUSHOQiUuVSY5wv6hBYwwy3xM-f4UeK
+spring.datasource.url=${DATASOURCE_CONNECTION_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 # server config
 server.port=8081
@@ -24,10 +20,15 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # minio config
-minio.endpoint=http://cedeladela.crabdance.com:64000
-minio.accessKey=PP8VR990kZYk4YPNuinq
-minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
-minio.bucketName=hookabook
+
+#minio.endpoint=http://cedeladela.crabdance.com:64000
+#minio.accessKey=PP8VR990kZYk4YPNuinq
+#minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
+#minio.bucketName=hookabook
+minio.endpoint=${MINIO_ENDPOINT}
+minio.accessKey=${MINIO_ACCESS_KEY}
+minio.secretKey=${MINIO_SECRET_KEY}
+minio.bucketName=${MINIO_BUCKET_NAME}
 
 # multipart config
 spring.servlet.multipart.enabled=true
