--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -21,14 +21,14 @@ spring.jpa.show-sql=true
 
 # minio config
 
-#minio.endpoint=http://cedeladela.crabdance.com:64000
-#minio.accessKey=PP8VR990kZYk4YPNuinq
-#minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
-#minio.bucketName=hookabook
-minio.endpoint=${MINIO_ENDPOINT}
-minio.accessKey=${MINIO_ACCESS_KEY}
-minio.secretKey=${MINIO_SECRET_KEY}
-minio.bucketName=${MINIO_BUCKET_NAME}
+minio.endpoint=http://cedeladela.crabdance.com:64000
+minio.accessKey=PP8VR990kZYk4YPNuinq
+minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
+minio.bucketName=hookabook
+#minio.endpoint=${MINIO_ENDPOINT}
+#minio.accessKey=${MINIO_ACCESS_KEY}
+#minio.secretKey=${MINIO_SECRET_KEY}
+#minio.bucketName=${MINIO_BUCKET_NAME}
 
 # multipart config
 spring.servlet.multipart.enabled=true
