--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -41,6 +41,7 @@ management.endpoints.web.exposure.include=health,metrics,prometheus
 # Enable Micrometer
 management.prometheus.metrics.export.enabled=true
 # requests_total
+# belezimo kolikokrat je bil rate book klican
 
 
 # logging
