--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 
-#spring.datasource.url=jdbc:postgresql://cedeladela.crabdance.com:64432/hookabook
-#spring.datasource.username=hookabook
-#spring.datasource.password=hOOkabOOk47
+spring.datasource.url=jdbc:postgresql://cedeladela.crabdance.com:64432/hookabook
+spring.datasource.username=hookabook
+spring.datasource.password=hOOkabOOk47
 #
-spring.datasource.url=${DATASOURCE_CONNECTION_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+#spring.datasource.url=${DATASOURCE_CONNECTION_URL}
+#spring.datasource.username=${DATASOURCE_USERNAME}
+#spring.datasource.password=${DATASOURCE_PASSWORD}
 
 # server config
 server.port=8081
@@ -20,14 +20,14 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # minio config
-#minio.endpoint=http://cedeladela.crabdance.com:64000
-#minio.accessKey=PP8VR990kZYk4YPNuinq
-#minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
-#minio.bucketName=hookabook
-minio.endpoint=${MINIO_ENDPOINT}
-minio.accessKey=${MINIO_ACCESS_KEY}
-minio.secretKey=${MINIO_SECRET_KEY}
-minio.bucketName=${MINIO_BUCKET_NAME}
+minio.endpoint=http://cedeladela.crabdance.com:64000
+minio.accessKey=PP8VR990kZYk4YPNuinq
+minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
+minio.bucketName=hookabook
+#minio.endpoint=${MINIO_ENDPOINT}
+#minio.accessKey=${MINIO_ACCESS_KEY}
+#minio.secretKey=${MINIO_SECRET_KEY}
+#minio.bucketName=${MINIO_BUCKET_NAME}
 
 # multipart config
 spring.servlet.multipart.enabled=true
@@ -48,4 +48,16 @@ management.prometheus.metrics.export.enabled=true
 spring.application.name=Hookabook-audiobook
 spring.application.version=1.0
 spring.profiles.active=test
+
+#graphql
+spring.graphql.graphiql.enabled=true
+#query {
+#getTopRatedAudiobooks(limit: 5) {
+#id
+#title
+#totalRatingsCount
+#averageRating
+#}
+#}
+
 
