--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,63 +1,77 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5433/hookabook
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+# CONSUL CONFIGURATION
+spring.application.name=hookabook-audiobook
+spring.config.import=consul:cedeladela.crabdance.com:64050
 
-spring.datasource.url=jdbc:postgresql://cedeladela.crabdance.com:64432/hookabook
-spring.datasource.username=hookabook
-spring.datasource.password=hOOkabOOk47
-#
-#spring.datasource.url=${DATASOURCE_CONNECTION_URL}
-#spring.datasource.username=${DATASOURCE_USERNAME}
-#spring.datasource.password=${DATASOURCE_PASSWORD}
-
-# server config
+# SERVER CONFIGURATION
 server.port=8081
 
-# db config
+# DB CONFIGURATION
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-# minio config
-minio.endpoint=http://cedeladela.crabdance.com:64000
-minio.accessKey=PP8VR990kZYk4YPNuinq
-minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
-minio.bucketName=hookabook
+spring.datasource.url=${consul.datasource.connection.url}
+spring.datasource.username=${consul.datasource.username}
+spring.datasource.password=${consul.datasource.password}
+
+#spring.datasource.url=${DATASOURCE_CONNECTION_URL}
+#spring.datasource.username=${DATASOURCE_USERNAME}
+#spring.datasource.password=${DATASOURCE_PASSWORD}
+
+#spring.datasource.url=jdbc:postgresql://localhost:5433/hookabook
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
+#spring.datasource.url=jdbc:postgresql://cedeladela.crabdance.com:64432/hookabook
+#spring.datasource.username=hookabook
+#spring.datasource.password=hOOkabOOk47
+
+
+# MINIO CONFIGURATION
+
+minio.endpoint=${consul.minio.endpoint}
+minio.accessKey=${consul.minio.accessKey}
+minio.secretKey=${consul.minio.secretKey}
+minio.bucketName=${consul.minio.bucketName}
+
 #minio.endpoint=${MINIO_ENDPOINT}
 #minio.accessKey=${MINIO_ACCESS_KEY}
 #minio.secretKey=${MINIO_SECRET_KEY}
 #minio.bucketName=${MINIO_BUCKET_NAME}
 
-# multipart config
+#minio.endpoint=http://cedeladela.crabdance.com:64000
+#minio.accessKey=PP8VR990kZYk4YPNuinq
+#minio.secretKey=x2zMzEG9KqivXd1rTPxmuxh3vZ6I3vW0iI49pyKP
+#minio.bucketName=hookabook
+
+
+
+# HEALTH CHECK AND METRICS CONFIGURATION
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.prometheus.metrics.export.enabled=true
+
+    #http://localhost:8081/actuator/health
+    # requests_total
+    # belezimo kolikokrat je bil rate book klican
+
+
+# GRAPHQL CONFIGURATION
+spring.graphql.graphiql.enabled=true
+    #query {
+    #getTopRatedAudiobooks(limit: 5) {
+    #id
+    #title
+    #totalRatingsCount
+    #averageRating
+    #}
+    #}
+
+
+
+
+# OTHER CONFIGURATION
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=550MB
-
-# health check
-management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=health,metrics,prometheus
-#http://localhost:8081/actuator/health
-# Enable Micrometer
-management.prometheus.metrics.export.enabled=true
-# requests_total
-# belezimo kolikokrat je bil rate book klican
-
-
-# logging
-spring.application.name=Hookabook-audiobook
-spring.application.version=1.0
-spring.profiles.active=test
-
-#graphql
-spring.graphql.graphiql.enabled=true
-#query {
-#getTopRatedAudiobooks(limit: 5) {
-#id
-#title
-#totalRatingsCount
-#averageRating
-#}
-#}
-
-
