--- a/api/pom.xml
+++ b/api/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>jackson-module-kotlin</artifactId>
             <version>2.13.0</version> <!-- Use the latest version available -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-config</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
