--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -53,7 +53,7 @@ management.endpoints.web.exposure.include=health,metrics,prometheus
 management.prometheus.metrics.export.enabled=true
 
     #http://localhost:8081/actuator/health
-    # requests_total
+    # audiobookRatings_total
     # belezimo kolikokrat je bil rate book klican
 
 
