graphql CORS fix

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -59,6 +59,9 @@ management.prometheus.metrics.export.enabled=true
 
 # GRAPHQL CONFIGURATION
 spring.graphql.graphiql.enabled=true
+#change path to /graphql
+spring.graphql.path=/api/graphql
+spring.graphql.cors.allowed-origins=*
     #query {
     #getTopRatedAudiobooks(limit: 5) {
     #id
